# australis

./: CHANGELOG.md  Jenkinsfile  README.md  README_angular.md  angular.json  app-icon.xcf  build  package-lock.json  package.json
builder-image/: Dockerfile
builder-image-android/: Dockerfile
builder-image-android/src/etc/com.github.jrobiche.australis/: MainActivity.kt  build.gradle.kts
docs/: CHANGELOG.md
src/: _variables.sass  custom-theme.scss  index.html  styles.sass
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: australis.rs  commands.rs  lib.rs  main.rs
src-tauri/src/australis/: commands.rs  game_console_configuration.rs  structs.rs  tauri.rs  utils.rs
src/app/: app-routing.module.ts  app.component.html  app.component.sass  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts
src/app/classes/: game-console.ts
src/app/components/about-page/: about-page.component.html  about-page.component.sass  about-page.component.ts
src/app/components/confirmation-dialog/: confirmation-dialog.component.html  confirmation-dialog.component.ts
src/app/components/console-dashboard/: console-dashboard.component.html  console-dashboard.component.sass  console-dashboard.component.spec.ts  console-dashboard.component.ts
src/app/components/console-manager/: console-manager.component.html  console-manager.component.sass  console-manager.component.spec.ts  console-manager.component.ts
src/app/components/consoles-page/: consoles-page.component.html  consoles-page.component.spec.ts  consoles-page.component.ts
src/app/interfaces/: asset.ts  aurora-http-schemas.ts  aurora.ts  confirmation-dialog-data.ts  confirmation-dialog.ts  game-console-configuration.ts  game-list-entry.ts  log-entry.ts  navlink.ts  sidenav-route-group.ts  sidenav-route.ts  upload-assets-dialog-data.ts
src/app/modules/about/: about.module.ts  (+1 more)
src/app/services/: aurora-ftp.service.ts  aurora-game.service.ts  aurora-http.service.ts  game-console-configuration.service.spec.ts  game-console-configuration.service.ts  tauri.service.ts  tauri.worker.ts  ui.service.ts  utils.service.ts  xboxcatalog.service.ts  xboxunity.service.ts
src/app/types/: app.ts  aurora.ts  xbox-catalog.ts  xbox-unity.ts
(+308 files in other folders)
