[package]
name = "australis"
version = "0.1.0"
description = "A client for the Aurora Xbox 360 Dashboard"
authors = ["jrobiche"]
license = "GPL-3.0-or-later"
repository = "https://github.com/jrobiche/australis"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlite = "0.36.1"
log = "0.4"
# the feature "devtools" can be added for inspect element to appear in right-click menu
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
# TODO set to latest tag
# libaustralis = { git = "https://github.com/jrobiche/libaustralis.git", tag = "0.1.0" }
# libaustralis = { git = "https://github.com/jrobiche/libaustralis.git", branch = "next" }
libaustralis = { git = "https://github.com/jrobiche/libaustralis.git", branch = "fix/improve-modules" }
base64 = "0.22.1"
env_logger = "0.11.6"
