[package]
name = "australis"
version = "0.1.0"
description = "A client for the Aurora Xbox 360 Dashboard"
authors = ["jrobiche"]
license = "GPL-3.0-or-later"
repository = "https://github.com/jrobiche/australis"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
base64 = "0.22.1"
env_logger = "0.11.8"
libaustralis = { git = "https://github.com/jrobiche/libaustralis.git", tag = "0.3.0" }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlite = "0.37.0"
# the feature "devtools" can be added for inspect element to appear in right-click menu
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.3"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
